--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ version: 2
 name: 도규원
 title: JAVA 백엔드 개발 지망생
 email: ds257873@naver.com
+# website: www.github.com/sproogen/resume-theme
 
 # Dark Mode (true/false/never)
 darkmode: false
@@ -29,7 +30,7 @@ linkedin_username: ds257873
 # orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
-#additional_links:
+# additional_links:
 #- title: itsgoingto.be
 #  icon: fas fa-globe
 #  url: https://www.itsgoingto.be
@@ -47,7 +48,7 @@ linkedin_username: ds257873
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  안녕하십니까. JAVA Spring boot를 위주로 공부하는 취업준비생 도규원입니다.
+  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
 
   I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
 
@@ -71,40 +72,45 @@ content:
         description: | # this will include new lines to allow paragraphs
           I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
 
-  - title: 경력 # Title for the section
+  - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: 대구교통공사
-        # link: boringcompany.com
+        title: The Boring Company
+        link: boringcompany.com
         # link_text: boringcompany.com
-        sub_title: (비개발)전기직무
-        caption: 2020.08 - 2023.08
+        sub_title: Senior Network System Administrator
+        caption: November 2017 - Present
         quote: >
+          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
         description: | # this will include new lines to allow paragraphs
-            전기설비 유지보수
-layout: list # Type of content section (list/text)
-    content:
-      - layout: left
-        title: 한전KPS
-        # link: boringcompany.com
-        # link_text: boringcompany.com
-        sub_title: (비개발)체험형 인턴
-        caption: 2020.08 - 2023.08
-        quote: >
-        description: | # this will include new lines to allow paragraphs
-            송전설비 정비 보조 
-  - title: 교육 # Title for the section
-    layout: list # Type of content section (list/text)
-    content:
-      - layout: left
-        title: 경희대학교
-        caption: 2013.03 - 2019.02
-        sub_title: 전자공학과
-        quote: >
-        description: | # this will include new lines to allow paragraphs
-         	전자회로, 통신, 임베디드, 반도체 등의 대학교육
+            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
 
+  - title: Education # Title for the section
+    layout: list # Type of content section (list/text)
+    content:
+      - layout: left
+        title: Harvard University
+        caption: 2010 - 2013
+        sub_title: BSc Computer Science
+        quote: >
+          Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
+        description: | # this will include new lines to allow paragraphs
+          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
+
+          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+
+  - title: A Little More About Me
+    layout: text
+    content: | # this will include new lines to allow paragraphs
+      Alongside my interests in networks and software engineering some of my other interests and hobbies are:
+      - Rock climbing
+      - Gaming
+      - Knitting
+      - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
+
+      Look at this cool image  
+      ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
 
 # Footer
 footer_show_references: true
