--- a/_config.yml
+++ b/_config.yml
@@ -72,19 +72,19 @@ content:
         description: | # this will include new lines to allow paragraphs
           I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
 
-  - title: Experience # Title for the section
+  - title: Career # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: The Boring Company
-        link: boringcompany.com
+        title: 대구교통공사
+        #link: boringcompany.com
         # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
+        sub_title: 전기직(비개발)
+        caption: 2020.08.03 - 2023.08.03
         quote: >
           Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
         description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+            지하철 전기설비유지보수
 
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
@@ -101,7 +101,7 @@ content:
           I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
 
   - title: Certification
-    layout: text
+    layout: list
     content: | # this will include new lines to allow paragraphs
       - 정보처리기사
       - 정보통신기사
@@ -113,6 +113,8 @@ content:
       - 컴퓨터활용능력1급
       - 리눅스마스터2급
       - 네트워크관리사2급
+      - TOEIC 835
+      - JLPT N1
 
 
 # Footer
