--- a/_config.yml
+++ b/_config.yml
@@ -84,6 +84,19 @@ content:
           
         description: | # this will include new lines to allow paragraphs
             지하철 전기설비유지보수
+  - title: Intern # Title for the section
+    layout: list # Type of content section (list/text)
+    content:
+      - layout: left
+        title: 한전KPS
+        #link: boringcompany.com
+        # link_text: boringcompany.com
+        sub_title: 체험형 인턴(비개발)
+        caption: 2019.09.16 - 2019.12.15
+        quote: >
+          
+        description: | # this will include new lines to allow paragraphs
+            송전설비 정비 보조
             
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
